tests/NormalTests/paczka1/small_fuzzy/86823245.err
Error in line 3: S249 S249 985,6
Error in line 1: EkASK S249 38,0
Error in line 12: nZCPspNC S249 42,7
